--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Refresh Me</h1>
+        <h1 id="title">The Dicee Game</h1>
   
         <div class="dice">
           <p>Player 1</p>
